@@ -6,6 +6,7 @@ gipfel-0.2.9
 * fsync() temporary file before rename().
 * Add "Find Peak" dialog (right click on image).
 * Show height in search dialog to distinguish peaks with equal names.
+* Added "File->Screen Dump" feature.
 
 gipfel-0.2.8
 * Fix issue with image saving on some platforms (reported by David Mitchell).
